# treemmm

./: .gitignore  BUNDLE_README.md  CHANGELOG.md  LICENSE  LOGBOOK.md  README.md  pyproject.toml  requirements-lock.txt
.github/workflows/: test.yml
examples/: bayesian_and_hybrid_comparison.py  quickstart_pharma.py
paper/: EXPERIMENT_LOG.md  RELEASE_NOTES_v0.2.1.md  TreeMMM_White_Paper.md  arxiv_metadata.md  build_html.py  build_pdf.py  build_reviewer_bundle.py  build_v2_paper.py  calibration_plot.py  compute_fpr_only.py  dump_per_customer_shap.py  finalize_v2_paper.py  generate_fig13_power_analysis.py  generate_figures.py  generate_visual_abstract.py  mroi_pymc_hier.py  oracle_vs_naive_finding.md  phase8_1_oracle_investigation.py  positioning_and_scope.md  qc_check.py  run_benchmarks.py  run_benchmarks_adstock.py  run_benchmarks_adstock_headline.py  run_benchmarks_geo_panel.py  run_glmm_dist_benchmark.py  run_meridian_only.py  run_multiseed.py  run_power_analysis.py  threshold_sensitivity.py  treemmm_ijf.tex  treemmm_white_paper_v2.html  treemmm_white_paper_v2.md  update_paper_multiseed.py
paper/arxiv_submission/: refs.bib  treemmm_ijf.tex
paper/ref_audit/: mmm_bayesian.csv  shap_causal_adstock.csv  tree_forecasting.csv
paper/results/: benchmark_adstock.csv  benchmark_adstock_headline.csv  benchmark_cpg.csv  hcs_recovery.csv  (+30 more)
tests/: test_adstock.py  test_bayesian_baseline.py  test_benchmark.py  test_budget_reallocation.py  test_catboost_model.py  test_cli.py  test_config.py  test_data_handler.py  test_decomposer.py  test_demo_datasets.py  test_dgp_evaluator.py  test_generator.py  test_glmm_baseline.py  test_glmm_distributional.py  test_glmm_hybrid.py  test_interaction_discovery.py  test_monotone_constraint.py  test_mroi.py  test_mroi_benchmark.py  test_notebook_runner.py  test_paper.py  test_pipeline.py  test_regime_check.py  test_reporting.py  test_shap_engine.py  test_shap_sign_audit.py  test_temporal.py  test_xgboost_model.py
treemmm/: __init__.py  pipeline.py
(+37 files in other folders)
