[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treemmm"
version = "0.1.0"
description = "Tree-based Market Mix Modeling with SHAP attribution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "James Young", email = "james@foretodata.com" },
]
keywords = ["marketing-mix-modeling", "mmm", "shap", "xgboost", "lightgbm", "attribution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "lightgbm>=4.0",
    "shap>=0.43",
    "optuna>=3.4",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.urls]
Homepage = "https://github.com/jamesyoung93/treemmm"
Documentation = "https://github.com/jamesyoung93/treemmm#readme"
Repository = "https://github.com/jamesyoung93/treemmm"

[project.scripts]
treemmm = "treemmm.ui.cli_runner:main"

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]
catboost = ["catboost>=1.2"]
bayesian = ["pymc-marketing>=0.8"]
reporting = ["python-pptx>=0.6", "openpyxl>=3.1"]
ui = ["ipywidgets>=8.0"]
all = [
    "xgboost>=2.0",
    "catboost>=1.2",
    "pymc-marketing>=0.8",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "ipywidgets>=8.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
